--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.4",
     "multer": "^1.4.5-lts.1",
+    "react-router-dom": "^6.21.2",
     "stripe": "^14.12.0",
     "uuid": "^9.0.1"
   }
